--- a/app/views/articles/_comment.html.erb
+++ b/app/views/articles/_comment.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h4>by <%= comment.author_name %></h4>
   <p class="comment"><%= comment.body %></p>
+  <p>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
 </div>
