--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<h3>Comments</h3>
+<h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'comment', collection: @article.comments %>
 <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
