--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<p><%= image_tag @article.image.url %></p>
 <p><%= @article.body %></p>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'comment', collection: @article.comments %>
