Add a validation tho show or not an image for an article
This commit makes a validation into the show.html.erb to show an image for
an article, in case there is no image it will no show anything, and same
for form to upload an image.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,9 @@
     <%= f.text_field :tag_list %>
   </p>
   <p>
+    <% if @article.image.exists? %>
+      <%= image_tag @article.image.url %><br/>
+    <% end %>
     <%= f.label :image, "Attach an Image" %><br />
     <%= f.file_field :image %>
   </p>
