Add a new Atachment model
This commit adds a new model called Atachment and an instruction into the Article
model to generate a new small size when an image is upload.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,7 +18,7 @@
   </p>
   <p>
     <% if @article.image.exists? %>
-      <%= image_tag @article.image.url %><br/>
+      <%= image_tag @article.image.url(:medium) %><br/>
     <% end %>
     <%= f.label :image, "Attach an Image" %><br />
     <%= f.file_field :image %>
